--- a/index.html
+++ b/index.html
@@ -8,21 +8,17 @@
         <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
         <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
     </head>
-    <body
-        class="h-screen bg-cover bg-center bg-fixed relative"
-        style="background-image: url('background-image2-cropped.jpeg')"
-    >
-        <!-- Dark overlay for the parallax background -->
+    <body class="h-screen bg-cover bg-center bg-fixed relative" style="background-image: url('background-image.jpeg')">
+        <!-- Dark overlay for the background -->
         <div class="absolute inset-0 bg-black opacity-25"></div>
 
         <div class="flex flex-col justify-center items-center h-full space-y-4 text-white">
-            <div class="flex justify-center items-center space-x-4 max-w-xs md:max-w-sm">
+            <div class="flex justify-center items-center space-x-2 mt-60 md:mt-80 md:pt-20" style="width: 200px">
                 <img src="logo1.png" alt="Vinylhead logo" class="w-1/4 h-auto z-10" />
                 <img src="vinylhead-text.png" alt="Vinylhead text" class="w-3/4 h-auto z-10" />
             </div>
         </div>
 
-        <!-- Footer -->
         <footer class="absolute bottom-5 w-full text-center text-white text-sm opacity-80 z-10">
             &copy; Vinylhead 2024
         </footer>
