--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="absolute inset-0 bg-black opacity-25"></div>
 
         <div class="flex flex-col justify-center items-center h-full space-y-4 text-white">
-            <div class="flex justify-center items-center space-x-2 mt-60 md:mt-80 md:pt-20" style="width: 200px">
+            <div class="flex justify-center items-center space-x-2 md:mt-80 md:pt-40" style="width: 200px">
                 <img src="logo1.png" alt="Vinylhead logo" class="w-1/4 h-auto z-10" />
                 <img src="vinylhead-text.png" alt="Vinylhead text" class="w-3/4 h-auto z-10" />
             </div>
