--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
         <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
         <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
     </head>
-    <body class="h-screen bg-cover bg-center bg-fixed relative" style="background-image: url('background-image.jpeg')">
+    <body
+        class="h-screen bg-black bg-cover bg-center bg-fixed relative"
+        style="background-image: url('background-image.jpeg')"
+    >
         <!-- Dark overlay for the background -->
         <div class="absolute inset-0 bg-black opacity-25"></div>
 
