--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body
         class="h-screen bg-black bg-cover bg-center bg-fixed relative"
-        style="background-image: url('background-image2.png')"
+        style="background-image: url('background-image.png')"
     >
         <footer class="absolute bottom-5 w-full text-center text-white text-sm opacity-80 z-10">
             &copy; Vinylhead 2024
